objects/BW_Application_Record_Result__c.object
<CustomObject>
    <description>Bluewolf application record results</description>
    <fields>
        <fullName>BW_Application_Result__c</fullName>
        <description>The application result this record result is associated to</description>
        <label>BW Application Result</label>
        <referenceTo>BW_Application_Result__c</referenceTo>
        <relationshipName>R00N50000001jNSnEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message for the record if it failed</description>
        <label>Error Message</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <description>The record result</description>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BW Application Record Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Result__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Record Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BW Application Record Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>